# DreadedX

./: .gitignore  README.md  build.sh  cleanup.sh  developercv.cls  en.tex  main.nl.tex  main.tex  nl.tex  svg.sh
markdown/: README.md  blurb.en.md  blurb.md  blurb.nl.md
markdown/project/: automation.en.md  automation.md  automation.nl.md  car-stereo.en.md  car-stereo.md  car-stereo.nl.md  inventory.en.md  inventory.nl.md  pico_p1.en.md  pico_p1.md  pico_p1.nl.md  siranga.en.md  z80.md  z80.nl.md
tool/: Cargo.toml
tool/src/: main.rs
yaml/: education.en.yml  education.nl.yml  experience.en.yml  experience.nl.yml
