[package]
name = "tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
gray_matter = { version = "0.2.6", features = [
	"toml",
], default-features = false }
regex = "1.9.4"
serde = { version = "1.0.188", features = ["derive"] }
walkdir = "2.3.3"
